crates/locus-core/tests/common/snapshots/regression_distortion_hub__common__hub__hub_aprilgrid_distortion_brown_conrady_v1_1920x1080.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.8940143369175627
  mean_precision: 0.9967104660045834
  mean_rmse: 0.2335
  mean_reprojection_rmse: 0.2246
  p50_translation_error: 0.0004
  p90_translation_error: 0.0027
  p99_translation_error: 0.3989
  p50_rotation_error: 0.0593
  p90_rotation_error: 0.2687
  p99_rotation_error: 98.5722
  mean_hamming: 0.0196
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0021_cam_0000.png
      missed: 36
      extra: 0
      rmse: 0
    - filename: scene_0036_cam_0000.png
      missed: 34
      extra: 0
      rmse: 1.7459
    - filename: scene_0023_cam_0000.png
      missed: 30
      extra: 0
      rmse: 1.6411
    - filename: scene_0005_cam_0000.png
      missed: 27
      extra: 0
      rmse: 1.6128
    - filename: scene_0025_cam_0000.png
      missed: 25
      extra: 0
      rmse: 1.5026
