crates/locus-core/tests/common/snapshots/regression_distortion_hub__common__hub__hub_aprilgrid_distortion_brown_conrady_v1_1920x1080_fast.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.9293087780077817
  mean_precision: 0.994287908034988
  mean_rmse: 1.0947
  mean_reprojection_rmse: 8.6528
  p50_translation_error: 0.0896
  p90_translation_error: 1.4633
  p99_translation_error: 3.1139
  p50_rotation_error: 15.8464
  p90_rotation_error: 59.5525
  p99_rotation_error: 129.9296
  mean_hamming: 0.0114
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0029_cam_0000.png
      missed: 14
      extra: 0
      rmse: 0.9813
    - filename: scene_0036_cam_0000.png
      missed: 11
      extra: 0
      rmse: 0.7939
    - filename: scene_0000_cam_0000.png
      missed: 8
      extra: 1
      rmse: 1.3548
    - filename: scene_0010_cam_0000.png
      missed: 8
      extra: 0
      rmse: 1.2368
    - filename: scene_0026_cam_0000.png
      missed: 8
      extra: 0
      rmse: 0.8607
