crates/locus-core/tests/common/snapshots/regression_distortion_hub__common__hub__hub_aprilgrid_distortion_brown_conrady_v1_fast.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 489
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.8651924945062199
  mean_precision: 0.998989898989899
  mean_rmse: 1.3601
  mean_reprojection_rmse: 16.2512
  p50_translation_error: 0.0689
  p90_translation_error: 1.9256
  p99_translation_error: 3.4848
  p50_rotation_error: 13.0207
  p90_rotation_error: 75.623
  p99_rotation_error: 118.5564
  mean_hamming: 0.0868
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0026_cam_0000.png
      missed: 24
      extra: 0
      rmse: 1.7786
    - filename: scene_0029_cam_0000.png
      missed: 19
      extra: 0
      rmse: 1.5234
    - filename: scene_0016_cam_0000.png
      missed: 18
      extra: 0
      rmse: 1.7492
    - filename: scene_0041_cam_0000.png
      missed: 14
      extra: 0
      rmse: 1.702
    - filename: scene_0044_cam_0000.png
      missed: 14
      extra: 0
      rmse: 1.5797
