crates/locus-core/tests/common/snapshots/regression_distortion_hub__common__hub__hub_aprilgrid_distortion_kannala_brandt_v1.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 489
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.8519698671601094
  mean_precision: 0.9822570232647511
  mean_rmse: 1.4684
  mean_reprojection_rmse: 3.4764
  p50_translation_error: 0.1
  p90_translation_error: 0.3299
  p99_translation_error: 0.7582
  p50_rotation_error: 8.978
  p90_rotation_error: 27.0108
  p99_rotation_error: 48.6164
  mean_hamming: 0.0136
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0037_cam_0000.png
      missed: 17
      extra: 0
      rmse: 1.6014
    - filename: scene_0045_cam_0000.png
      missed: 14
      extra: 0
      rmse: 1.4364
    - filename: scene_0020_cam_0000.png
      missed: 13
      extra: 1
      rmse: 2.1072
    - filename: scene_0015_cam_0000.png
      missed: 13
      extra: 0
      rmse: 2.1182
    - filename: scene_0047_cam_0000.png
      missed: 12
      extra: 1
      rmse: 1.4306
