crates/locus-core/tests/common/snapshots/regression_distortion_hub__common__hub__hub_aprilgrid_distortion_kannala_brandt_v1_1920x1080_fast.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.8130099829261642
  mean_precision: 0.9897285739103314
  mean_rmse: 1.5204
  mean_reprojection_rmse: 14.2697
  p50_translation_error: 0.0691
  p90_translation_error: 0.2306
  p99_translation_error: 0.465
  p50_rotation_error: 13.6611
  p90_rotation_error: 30.2436
  p99_rotation_error: 49.3248
  mean_hamming: 0.0266
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0007_cam_0000.png
      missed: 18
      extra: 0
      rmse: 1.8238
    - filename: scene_0011_cam_0000.png
      missed: 17
      extra: 0
      rmse: 1.3561
    - filename: scene_0013_cam_0000.png
      missed: 15
      extra: 0
      rmse: 1.8893
    - filename: scene_0041_cam_0000.png
      missed: 15
      extra: 0
      rmse: 1.6207
    - filename: scene_0019_cam_0000.png
      missed: 15
      extra: 0
      rmse: 1.5057
